# claude-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  __init__.py  environment.yml  example.py  pyproject.toml  requirements.txt
skills/: __init__.py
skills/batch_renamer/: README.md  SKILL.md  __init__.py  batch_renamer.py  example.py
skills/data_processor/: README.md  SKILL.md  __init__.py  data_processor.py  example.py
skills/directory_tree/: README.md  SKILL.md  __init__.py  directory_tree.py  example.py
skills/ffmpeg_processor/: README.md  SKILL.md  __init__.py  example.py  ffmpeg_processor.py  requirements.txt
skills/file_comparator/: README.md  SKILL.md  __init__.py  example.py  file_comparator.py
skills/file_organizer/: README.md  SKILL.md  __init__.py  example.py  file_organizer.py
skills/image_downloader/: README.md  SKILL.md  __init__.py  example.py  image_downloader.py  requirements.txt
skills/image_processor/: README.md  SKILL.md  __init__.py  example.py  image_processor.py
skills/password_generator/: README.md  SKILL.md  __init__.py  example.py  password_generator.py
skills/pdf_tool/: README.md  SKILL.md  __init__.py  example.py  pdf_tool.py
skills/pdf_word_converter/: README.md  SKILL.md  __init__.py  converter.py  example.py  pdf_word_converter.py  requirements.txt
skills/sftp_tool/: README.md  SKILL.md  __init__.py  example.py  requirements.txt  sftp_tool.py
skills/web_crawler/: README.md  SKILL.md  __init__.py  example.py  web_crawler.py
tests/: test_pdf_word_converter.py  test_web_crawler.py
(+6 files in other folders)
